Category Model done

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -47,5 +47,11 @@
   "container": {
     "dataSource": "container",
     "public": true
+  },
+  "dincategory": {
+    "dataSource": "mongodb",
+    "public": true,
+    "$promise": {},
+    "$resolved": true
   }
 }
